# outreach-os

./: .gitignore  .opencodeignore  CLEANUP_PLAN.md  README.md  architecture_suggestion.md  feature-map.md  index.html  package-lock.json  package.json  validate.sh
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
docs/: CNAME  coming-soon.html  contact.html  download.html  index.html
docs/css/: style.css
docs/js/: main.js
outreach-site/: index.html
outreach-site/js/: starfield.js
scripts/: validate.sh
src/: App.tsx  changelog.ts  index.css  main.tsx
src-core/: Cargo.toml
src-core/migrations/: 20260123010000_add_ai_fields.sql  20260123020000_settings_table.sql  20260217000000_email_crm_phase1.sql  20260306160000_add_next_contact_event.sql  20260306170500_contact_events_table.sql  20260320000000_add_event_type_to_contact_events.sql  20260407000000_scheduled_emails_attachments.sql  20260407000001_template_attachments.sql  20260407000002_drop_dead_tables.sql  20260418000001_drop_contacts_dead_columns.sql
src-core/src/: ai.rs  contacts.rs  crypto.rs  db.rs  email_ai.rs  email_service.rs  gmail.rs  import.rs  lib.rs  outlook.rs  settings.rs  tracking.rs
src-mcp/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  scheduler.rs  tray.rs  utils.rs
src/hooks/: use-email-ai.ts  use-errors.ts  use-keyboard-shortcuts.ts  use-settings.ts  use-tags.ts
src/lib/: keyboard-shortcuts.ts
src/pages/: ContactDetailPage.tsx  ContactsPage.tsx  DashboardPage.tsx  NotesPage.tsx  (+4 more)
(+50 files in other folders)
