[package]
name = "outreach-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
base64 = "0.22"
calamine = "0.26"
chrono = { version = "0.4.43", features = ["serde"] }
csv = "1.3"
dirs = "6.0"
keyring = "3"
oauth2 = "5"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
url = "2"
uuid = { version = "1.19.0", features = ["v4"] }
