[package]
name = "outreach-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22"
calamine = "0.26"
chrono = { version = "0.4.43", features = ["serde"] }
csv = "1.3"
dirs = "6.0"
keyring = { version = "3", features = ["apple-native"] }
oauth2 = "5"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
url = "2"
urlencoding = "2"
uuid = { version = "1.19.0", features = ["v4"] }
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
tracing = "0.1"
